--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,14 +18,14 @@ dependencies = [
     "scipy==1.14.1", "six==1.16.0", "h5py==3.12.1", 
     
     # Machine Learning & Transformers
-    "transformers==4.46.1", "tokenizers==0.20.1", "sentencepiece==0.2.0",
+    "transformers", "tokenizers", "sentencepiece==0.2.0",
     "timm==1.0.11", "peft==0.13.2", "diffusers==0.32.0", "bitsandbytes",
     
     # Acceleration & Optimization
     "accelerate==1.0.1", "torch", 
     
     # Computer Vision & Image Processing
-    "opencv-python==4.10.0.84", "pillow==10.2.0", "imageio==2.36.0", 
+    "opencv-python==4.10.0.84", "pillow", "imageio==2.36.0", 
     "imageio-ffmpeg==0.5.1", "decord==0.6.0", "einops",
     
     # Experiment Tracking & Logging
@@ -33,7 +33,7 @@ dependencies = [
     
     # Miscellaneous Utilities
     "tqdm==4.66.5", "PyYAML==6.0.1", "idna==3.6", "protobuf==5.28.3",
-    "gradio==5.3.0", "huggingface_hub==0.26.1", "moviepy==1.0.3", "flask", "flask_restful", "aiohttp",
+    "gradio", "huggingface_hub==0.26.1", "moviepy==1.0.3", "flask", "flask_restful", "aiohttp",
     
     # System & Monitoring Tools
     "gpustat", "watch",
