Add CLI for inference (#277)
Co-authored-by: kevin314 <kevin.lin.cs1@gmail.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,8 @@ dependencies = [
     "st_attn>=0.0.1"
 ]
 
+[project.scripts]
+fastvideo = "fastvideo.v1.entrypoints.cli.main:main"
 
 [tool.setuptools.packages.find]
 exclude = ["assets*", "docker*", "docs", "scripts*"]
