--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,9 +61,42 @@ ignore_missing_imports = true
 disallow_untyped_calls = true
 check_untyped_defs = true
 no_implicit_optional = true
+follow_imports = "silent"
 
 [tool.codespell]
 skip ="./data,./wandb,./csrc/sliding_tile_attention/tk"
+
+[tool.ruff]
+# Allow lines to be as long as 80.
+line-length = 80
+
+[tool.ruff.lint]
+select = [
+    # pycodestyle
+    "E",
+    # Pyflakes
+    "F",
+    # pyupgrade
+    "UP",
+    # flake8-bugbear
+    "B",
+    # flake8-simplify
+    "SIM",
+    # isort
+    # "I",
+    "G",
+]
+ignore = [
+    # star imports
+    "F405", "F403",
+    # lambda expression assignment
+    "E731",
+    # Loop control variable not used within loop body
+    "B007",
+    # f-string format
+    "UP032",
+]
+
 [tool.ruff.lint.per-file-ignores]
 "fastvideo/models/stepvideo/diffusion/video_pipeline.py" = ["F821"]
 "fastvideo/sample/call_remote_server_stepvideo.py" = ["E722"]
@@ -75,7 +108,9 @@ skip ="./data,./wandb,./csrc/sliding_tile_attention/tk"
 
 
 [tool.yapf]
-column_limit = 120
+column_limit = 80
 
 [tool.isort]
-line_length = 120
+line_length = 80
+use_parentheses = true
+skip_gitignore = true
