--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,8 @@ dependencies = [
     
     # Miscellaneous Utilities
     "tqdm==4.66.5", "PyYAML==6.0.1", "idna==3.6", "protobuf==5.28.3",
-    "gradio==5.3.0", "huggingface_hub==0.26.1", "moviepy==1.0.3", "flask", "flask_restful", "aiohttp",
+    "gradio==5.3.0", "huggingface_hub==0.26.1", "moviepy==1.0.3", "flask",
+    "flask_restful", "aiohttp", "huggingface_hub",
     
     # System & Monitoring Tools
     "gpustat", "watch",
@@ -60,7 +61,6 @@ warn_unused_configs = true
 ignore_missing_imports = true
 disallow_untyped_calls = true
 check_untyped_defs = true
-no_implicit_optional = true
 follow_imports = "silent"
 
 [tool.codespell]
