--- a/.github/workflows/pr-test.yml
+++ b/.github/workflows/pr-test.yml
@@ -5,7 +5,7 @@ on:
     branches: [main]
   pull_request:
     branches: [main]
-    types: [opened, synchronize, reopened]
+    types: [opened, ready_for_review, synchronize, reopened]
 
 concurrency:
   group: pr-test-${{ github.ref }}
@@ -15,6 +15,7 @@ jobs:
   unit-test:
     if: github.event.pull_request.draft == false
     runs-on: ubuntu-latest
+    environment: maintainers
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
