--- a/.github/workflows/pr-test.yml
+++ b/.github/workflows/pr-test.yml
@@ -5,7 +5,7 @@ on:
     branches: [main]
   pull_request:
     branches: [main]
-    types: [opened, synchronize, reopened]
+    types: [opened, ready_for_review, synchronize, reopened]
 
 concurrency:
   group: pr-test-${{ github.ref }}
@@ -44,6 +44,7 @@ jobs:
         run: >-
           python .github/scripts/runpod_api.py 
           --gpu-type "NVIDIA A40"
+          --gpu-count 1
           --volume-size 100
           --test-command "./env_setup.sh &&
           pip install vllm &&
