--- a/.github/workflows/pr-test.yml
+++ b/.github/workflows/pr-test.yml
@@ -15,6 +15,7 @@ jobs:
   unit-test:
     if: github.event.pull_request.draft == false
     runs-on: ubuntu-latest
+    environment: runpod-runners
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
