--- a/.github/workflows/pr-test.yml
+++ b/.github/workflows/pr-test.yml
@@ -53,8 +53,49 @@ jobs:
           pip install pytest &&
           pytest ./fastvideo/v1/tests/ --ignore=./fastvideo/v1/tests/old_tests/ -s"
 
+  int-test:
+    if: github.event.pull_request.draft == false
+    runs-on: ubuntu-latest
+    environment: maintainers
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.10"
+
+      - name: Set up SSH key
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.RUNPOD_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+          ssh-keygen -y -f ~/.ssh/id_rsa > ~/.ssh/id_rsa.pub
+
+      - name: Install dependencies
+        run: pip install requests
+
+      - name: Run tests on RunPod
+        env:
+          RUNPOD_API_KEY: ${{ secrets.RUNPOD_API_KEY }}
+          GITHUB_SHA: ${{ github.sha }}
+          GITHUB_REF: ${{ github.ref }}
+          GITHUB_REPOSITORY: ${{ github.repository }}
+          GITHUB_RUN_ID: ${{ github.run_id }}
+          JOB_ID: "int-test" # Unique job identifier
+        timeout-minutes: 2
+        run: >-
+          python .github/scripts/runpod_api.py 
+          --gpu-type "NVIDIA A40"
+          --volume-size 100
+          --test-command "./env_setup.sh &&
+          pip install vllm &&
+          pip install pytest &&
+          pytest ./fastvideo/v1/tests/ --ignore=./fastvideo/v1/tests/old_tests/ -s"
+
   runpod-cleanup:
-    needs: [unit-test] # Add other jobs to this list as you create them
+    needs: [unit-test, int-test] # Add other jobs to this list as you create them
     if: always() # Run even if previous jobs fail
     runs-on: ubuntu-latest
     steps:
@@ -71,7 +112,7 @@ jobs:
 
       - name: Cleanup all RunPod instances
         env:
+          JOB_IDS: '["unit-test", "int-test"]' # JSON array of job IDs
           RUNPOD_API_KEY: ${{ secrets.RUNPOD_API_KEY }}
           GITHUB_RUN_ID: ${{ github.run_id }}
-          JOB_IDS: '["unit-test"]' # JSON array of job IDs
         run: python .github/scripts/runpod_cleanup.py
