--- a/.github/workflows/pr-test.yml
+++ b/.github/workflows/pr-test.yml
@@ -3,17 +3,39 @@ name: PR Test
 on:
   push:
     branches: [main]
+    paths:
+      - "fastvideo/**/*.py"
+      - ".github/workflows/pr-test.yml"
   pull_request:
     branches: [main]
     types: [opened, ready_for_review, synchronize, reopened]
+    paths:
+      - "fastvideo/**/*.py"
+      - ".github/workflows/pr-test.yml"
 
 concurrency:
   group: pr-test-${{ github.ref }}
   cancel-in-progress: true
 
 jobs:
-  unit-test:
-    if: github.event.pull_request.draft == false
+  change-filter:
+    runs-on: ubuntu-latest
+    if: ${{ github.event.pull_request.draft == false }}
+    outputs:
+      encoder-test: ${{ steps.filter.outputs.encoder-test }}
+    steps:
+      - uses: actions/checkout@v4
+      - uses: dorny/paths-filter@v2
+        id: filter
+        with:
+          filters: |
+            encoder-test:
+              - 'fastvideo/v1/models/encoders/**'
+              - 'fastvideo/v1/models/loaders/**'
+
+  encoder-test:
+    needs: change-filter
+    if: ${{ needs.change-filter.outputs.encoder-test == 'true' && github.event.pull_request.draft == false }}
     runs-on: ubuntu-latest
     environment: maintainers
     steps:
@@ -37,12 +59,12 @@ jobs:
 
       - name: Run tests on RunPod
         env:
+          JOB_ID: "encoder-test"
           RUNPOD_API_KEY: ${{ secrets.RUNPOD_API_KEY }}
           GITHUB_SHA: ${{ github.sha }}
           GITHUB_REF: ${{ github.ref }}
           GITHUB_REPOSITORY: ${{ github.repository }}
           GITHUB_RUN_ID: ${{ github.run_id }}
-          JOB_ID: "unit-test" # Unique job identifier
         timeout-minutes: 1
         run: >-
           python .github/scripts/runpod_api.py 
@@ -54,7 +76,7 @@ jobs:
           pytest ./fastvideo/v1/tests/ --ignore=./fastvideo/v1/tests/old_tests/ -s"
 
   int-test:
-    if: github.event.pull_request.draft == false
+    if: ${{ github.event.pull_request.draft == false }}
     runs-on: ubuntu-latest
     environment: maintainers
     steps:
@@ -78,12 +100,12 @@ jobs:
 
       - name: Run tests on RunPod
         env:
+          JOB_ID: "int-test"
           RUNPOD_API_KEY: ${{ secrets.RUNPOD_API_KEY }}
           GITHUB_SHA: ${{ github.sha }}
           GITHUB_REF: ${{ github.ref }}
           GITHUB_REPOSITORY: ${{ github.repository }}
           GITHUB_RUN_ID: ${{ github.run_id }}
-          JOB_ID: "int-test" # Unique job identifier
         timeout-minutes: 2
         run: >-
           python .github/scripts/runpod_api.py 
@@ -95,7 +117,7 @@ jobs:
           pytest ./fastvideo/v1/tests/ --ignore=./fastvideo/v1/tests/old_tests/ -s"
 
   runpod-cleanup:
-    needs: [unit-test, int-test] # Add other jobs to this list as you create them
+    needs: [encoder-test, int-test] # Add other jobs to this list as you create them
     if: always() # Run even if previous jobs fail
     runs-on: ubuntu-latest
     steps:
@@ -112,7 +134,7 @@ jobs:
 
       - name: Cleanup all RunPod instances
         env:
-          JOB_IDS: '["unit-test", "int-test"]' # JSON array of job IDs
+          JOB_IDS: '["encoder-test", "int-test"]' # JSON array of job IDs
           RUNPOD_API_KEY: ${{ secrets.RUNPOD_API_KEY }}
           GITHUB_RUN_ID: ${{ github.run_id }}
         run: python .github/scripts/runpod_cleanup.py
