--- a/.github/workflows/codespell.yml
+++ b/.github/workflows/codespell.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements-lint.txt
+          pip install -e ".[lint]"
       - name: Spelling check with codespell
         run: |
           # Refer to the above environment variable here
