--- a/.github/workflows/ruff.yml
+++ b/.github/workflows/ruff.yml
@@ -41,7 +41,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements-lint.txt
+          pip install -e ".[lint]"
       - name: Analysing the code with ruff
         run: |
           ruff check .
