--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,36 +15,66 @@ classifiers = [
 
 dependencies = [
     # Core Libraries
-    "scipy==1.14.1", "six==1.16.0", "h5py==3.12.1", 
-    
+    "scipy==1.14.1", "six==1.16.0", "h5py==3.12.1",
+
     # Machine Learning & Transformers
-    "transformers==4.46.1", "tokenizers==0.20.1", "sentencepiece==0.2.0",
+    "transformers>=4.46.1", "tokenizers>=0.20.1", "sentencepiece==0.2.0",
     "timm==1.0.11", "peft==0.13.2", "diffusers==0.32.0", "bitsandbytes",
+    "torch==2.5.1", "torchvision",
+
+    # vLLM
+    "vllm>=0.7.3",
     
     # Acceleration & Optimization
-    "accelerate==1.0.1", "torch", 
-    
+    "accelerate==1.0.1", "torch",
+
     # Computer Vision & Image Processing
-    "opencv-python==4.10.0.84", "pillow==10.2.0", "imageio==2.36.0", 
+    "opencv-python==4.10.0.84", "pillow>=10.3.0", "imageio==2.36.0",
     "imageio-ffmpeg==0.5.1", "decord==0.6.0", "einops",
-    
+
     # Experiment Tracking & Logging
     "wandb==0.18.5", "loguru", "test-tube==0.7.5",
-    
+
     # Miscellaneous Utilities
     "tqdm==4.66.5", "PyYAML==6.0.1", "idna==3.6", "protobuf==5.28.3",
     "gradio==5.3.0", "huggingface_hub==0.26.1", "moviepy==1.0.3", "flask",
     "flask_restful", "aiohttp", "huggingface_hub", "cloudpickle",
-    
+
     # System & Monitoring Tools
     "gpustat", "watch",
-    
+
     # Kernel & Packaging
     "wheel",
-
-    # Sliding Tile Atteniton Kernel
-    "st_attn>=0.0.1"
 ]
+
+[project.optional-dependencies]
+
+# flash-attn: pip install flash-attn==2.7.0.post2 --no-build-isolation 
+
+lint = [
+    # formatting
+    "yapf==0.32.0",
+    "toml==0.10.2",
+    "tomli==2.0.2",
+    "ruff==0.6.5",
+    "codespell==2.3.0",
+    "isort==5.13.2",
+    "sphinx-lint==1.0.0",
+
+    # type checking
+    "mypy==1.11.1",
+    "types-PyYAML",
+    "types-requests",
+    "types-setuptools",
+]
+
+test = [ 
+    "av",
+    "pytorch-msssim",
+    "pytest",
+]
+
+dev = [ "fastvideo[lint]", "fastvideo[test]", ]
 
 [project.scripts]
 fastvideo = "fastvideo.v1.entrypoints.cli.main:main"
