--- a/.github/workflows/pr-test.yml
+++ b/.github/workflows/pr-test.yml
@@ -71,9 +71,8 @@ jobs:
           --gpu-type "NVIDIA A40"
           --gpu-count 1
           --volume-size 100
-          --test-command "./env_setup.sh &&
-          pip install vllm &&
-          pip install pytest &&
+          --test-command "pip install -e .[test] &&
+          pip install flash-attn==2.7.0.post2 &&
           pytest ./fastvideo/v1/tests/ --ignore=./fastvideo/v1/tests/old_tests/ -s"
 
   ssim-test:
@@ -114,11 +113,8 @@ jobs:
           --gpu-count 2
           --disk-size 100
           --volume-size 100
-          --test-command "./env_setup.sh &&
-          pip install pytorch-msssim &&
-          pip install av &&
-          pip install vllm &&
-          pip install pytest &&
+          --test-command "pip install -e .[test] &&
+          pip install flash-attn==2.7.0.post2 &&
           python scripts/huggingface/download_hf.py --repo_id=FastVideo/FastHunyuan-diffusers --local_dir=data/FastHunyuan-diffusers --repo_type=model &&
           pytest ./fastvideo/v1/tests/ssim -vs"
 
