--- a/.github/workflows/pr-test.yml
+++ b/.github/workflows/pr-test.yml
@@ -12,6 +12,18 @@ on:
     paths:
       - "fastvideo/**/*.py"
       - ".github/workflows/pr-test.yml"
+  workflow_dispatch:
+    inputs:
+      run_encoder_test:
+        description: "Run encoder tests"
+        required: false
+        default: false
+        type: boolean
+      run_ssim_test:
+        description: "Run SSIM tests"
+        required: false
+        default: false
+        type: boolean
 
 concurrency:
   group: pr-test-${{ github.ref }}
@@ -20,7 +32,7 @@ concurrency:
 jobs:
   change-filter:
     runs-on: ubuntu-latest
-    if: ${{ github.event.pull_request.draft == false }}
+    if: ${{ github.event_name != 'workflow_dispatch' && github.event.pull_request.draft == false }}
     outputs:
       encoder-test: ${{ steps.filter.outputs.encoder-test }}
     steps:
@@ -37,7 +49,7 @@ jobs:
   #
   encoder-test:
     needs: change-filter
-    if: ${{ needs.change-filter.outputs.encoder-test == 'true' }}
+    if: ${{ always() && ((github.event_name != 'workflow_dispatch' && needs.change-filter.outputs.encoder-test == 'true') || (github.event_name == 'workflow_dispatch' && github.event.inputs.run_encoder_test == 'true')) }}
     runs-on: ubuntu-latest
     environment: runpod-runners
     steps:
@@ -78,7 +90,7 @@ jobs:
           pytest ./fastvideo/v1/tests/test_clip_encoder.py ./fastvideo/v1/tests/test_llama_encoder.py -s"
 
   ssim-test:
-    if: ${{ github.event.pull_request.draft == false }}
+    if: ${{ (github.event_name != 'workflow_dispatch' && github.event.pull_request.draft == false) || (github.event_name == 'workflow_dispatch' && github.event.inputs.run_ssim_test == 'true') }}
     runs-on: ubuntu-latest
     environment: runpod-runners
     steps:
@@ -122,7 +134,7 @@ jobs:
 
   runpod-cleanup:
     needs: [encoder-test, ssim-test] # Add other jobs to this list as you create them
-    if: ${{ always() && github.event.pull_request.draft == false && (contains(needs.*.result, 'success') || contains(needs.*.result, 'failure'))}}
+    if: ${{ always() && ((github.event_name != 'workflow_dispatch' && github.event.pull_request.draft == false) || github.event_name == 'workflow_dispatch') && (contains(needs.*.result, 'success') || contains(needs.*.result, 'failure'))}}
     runs-on: ubuntu-latest
     environment: runpod-runners
     steps:
