--- a/.github/workflows/pr-test.yml
+++ b/.github/workflows/pr-test.yml
@@ -74,7 +74,7 @@ jobs:
           --gpu-count 1
           --volume-size 100
           --test-command "pip install -e .[test] &&
-          pip install flash-attn==2.7.0.post2 &&
+          pip install flash-attn==2.7.0.post2 --no-build-isolation &&
           pytest ./fastvideo/v1/tests/test_clip_encoder.py ./fastvideo/v1/tests/test_llama_encoder.py -s"
 
   ssim-test:
@@ -116,7 +116,7 @@ jobs:
           --disk-size 100
           --volume-size 100
           --test-command "pip install -e .[test] &&
-          pip install flash-attn==2.7.0.post2 &&
+          pip install flash-attn==2.7.0.post2 --no-build-isolation &&
           python scripts/huggingface/download_hf.py --repo_id=FastVideo/FastHunyuan-diffusers --local_dir=data/FastHunyuan-diffusers --repo_type=model &&
           pytest ./fastvideo/v1/tests/ssim -vs"
 
