--- a/.github/workflows/pr-test.yml
+++ b/.github/workflows/pr-test.yml
@@ -32,7 +32,7 @@ concurrency:
 jobs:
   change-filter:
     runs-on: ubuntu-latest
-    if: ${{ github.event_name != 'workflow_dispatch' && github.event.pull_request.draft == false }}
+    if: ${{ github.event.pull_request.draft == false || github.event_name == 'workflow_dispatch' }}
     outputs:
       encoder-test: ${{ steps.filter.outputs.encoder-test }}
     steps:
@@ -49,7 +49,9 @@ jobs:
   #
   encoder-test:
     needs: change-filter
-    if: ${{ ((github.event_name != 'workflow_dispatch' && needs.change-filter.outputs.encoder-test == 'true') || (github.event_name == 'workflow_dispatch' && github.event.inputs.run_encoder_test == 'true')) }}
+    if: >-
+      (github.event_name != 'workflow_dispatch' && needs.change-filter.outputs.encoder-test == 'true') || 
+      (github.event_name == 'workflow_dispatch' && github.event.inputs.run_encoder_test == 'true')
     runs-on: ubuntu-latest
     environment: runpod-runners
     steps:
@@ -96,7 +98,9 @@ jobs:
 
   ssim-test:
     needs: change-filter
-    if: ${{ ((github.event_name != 'workflow_dispatch' && github.event.pull_request.draft == false) || (github.event_name == 'workflow_dispatch' && github.event.inputs.run_ssim_test == 'true')) }}
+    if: >-
+      (github.event_name != 'workflow_dispatch' && github.event.pull_request.draft == false) || 
+      (github.event_name == 'workflow_dispatch' && github.event.inputs.run_ssim_test == 'true')
     runs-on: ubuntu-latest
     environment: runpod-runners
     steps:
