Disable runpod-cleanup on pr drafts

--- a/.github/workflows/pr-test.yml
+++ b/.github/workflows/pr-test.yml
@@ -149,7 +149,7 @@ jobs:
 
   runpod-cleanup:
     needs: [encoder-test, ssim-test] # Add other jobs to this list as you create them
-    if: ${{ always() }}
+    if: ${{ always() && ((github.event_name != 'workflow_dispatch' && github.event.pull_request.draft == false) || github.event_name == 'workflow_dispatch') }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
