--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@ wandb/
 *.jpg
 *.safetensors
 *.mp4
-!fastvideo/v1/tests/ssim/reference_videos/*.mp4
+!fastvideo/v1/tests/ssim/reference_videos/**/*.mp4
 *.png
 *.gif
 *.pth
