[CI] Add manual triggers for PR workflow  (#320)
Co-authored-by: kevin314 <kevin.lin.cs1@gmail.com>

--- a/.github/workflows/pr-test.yml
+++ b/.github/workflows/pr-test.yml
@@ -189,6 +189,14 @@ jobs:
           --action delete
           --pod-id ${{ steps.create-pod.outputs.pod-id }}
 
+      - name: Terminate RunPod Instances
+        if: ${{ always() }}
+        env:
+          RUNPOD_API_KEY: ${{ secrets.RUNPOD_API_KEY }}
+          GITHUB_RUN_ID: ${{ github.run_id }}
+          JOB_ID: "ssim-test"
+        run: python .github/scripts/runpod_cleanup.py
+
   runpod-cleanup:
     needs: [encoder-test, ssim-test] # Add other jobs to this list as you create them
     if: ${{ always() && ((github.event_name != 'workflow_dispatch' && github.event.pull_request.draft == false) || github.event_name == 'workflow_dispatch') }}
