Test new workflow

--- a/.github/workflows/pr-test.yml
+++ b/.github/workflows/pr-test.yml
@@ -12,32 +12,49 @@ on:
     paths:
       - "fastvideo/**/*.py"
       - ".github/workflows/pr-test.yml"
+  workflow_dispatch:
+    inputs:
+      run_encoder_test:
+        description: "Run encoder-test"
+        required: false
+        default: false
+        type: boolean
+      run_ssim_test:
+        description: "Run ssim-test"
+        required: false
+        default: false
+        type: boolean
 
 concurrency:
   group: pr-test-${{ github.ref }}
   cancel-in-progress: true
 
 jobs:
+  pre-commit:
+    uses: ./.github/workflows/pre-commit.yml
+
   change-filter:
     runs-on: ubuntu-latest
-    if: ${{ github.event.pull_request.draft == false }}
+    needs: pre-commit
+    if: ${{ github.event.pull_request.draft == false || github.event_name == 'workflow_dispatch' }}
     outputs:
       encoder-test: ${{ steps.filter.outputs.encoder-test }}
     steps:
       - uses: actions/checkout@v4
-      - uses: dorny/paths-filter@v2
+      - uses: dorny/paths-filter@v3
         id: filter
         with:
           filters: |
             encoder-test:
               - 'fastvideo/v1/models/encoders/**'
               - 'fastvideo/v1/models/loaders/**'
-              - 'fastvideo/v1/tests/test_clip_encoder.py'
-              - 'fastvideo/v1/tests/test_llama_encoder.py'
+              - 'fastvideo/v1/tests/encoders/**'
 
   encoder-test:
     needs: change-filter
-    if: ${{ needs.change-filter.outputs.encoder-test == 'true' }}
+    if: >-
+      (github.event_name != 'workflow_dispatch' && needs.change-filter.outputs.encoder-test == 'true') || 
+      (github.event_name == 'workflow_dispatch' && github.event.inputs.run_encoder_test == 'true')
     runs-on: ubuntu-latest
     environment: runpod-runners
     steps:
@@ -45,7 +62,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: "3.10"
 
@@ -59,26 +76,54 @@ jobs:
       - name: Install dependencies
         run: pip install requests
 
-      - name: Run tests on RunPod
+      - name: Create RunPod instance
+        id: create-pod
         env:
           JOB_ID: "encoder-test"
           RUNPOD_API_KEY: ${{ secrets.RUNPOD_API_KEY }}
-          GITHUB_SHA: ${{ github.sha }}
-          GITHUB_REF: ${{ github.ref }}
-          GITHUB_REPOSITORY: ${{ github.repository }}
           GITHUB_RUN_ID: ${{ github.run_id }}
-        timeout-minutes: 30
+        timeout-minutes: 10
         run: >-
           python .github/scripts/runpod_api.py 
+          --action create
           --gpu-type "NVIDIA A40"
           --gpu-count 1
           --volume-size 100
-          --test-command "pip install -e .[test] &&
-          pip install flash-attn==2.7.0.post2 --no-build-isolation &&
-          pytest ./fastvideo/v1/tests/test_clip_encoder.py ./fastvideo/v1/tests/test_llama_encoder.py -s"
+
+      - name: Install dependencies on RunPod
+        env:
+          RUNPOD_API_KEY: ${{ secrets.RUNPOD_API_KEY }}
+        timeout-minutes: 10
+        run: >-
+          python .github/scripts/runpod_api.py 
+          --action execute
+          --pod-id ${{ steps.create-pod.outputs.pod-id }}
+          --test-command "pip install -e .[test] && pip install flash-attn==2.7.0.post2 --no-build-isolation"
+
+      - name: Run encoder tests
+        env:
+          RUNPOD_API_KEY: ${{ secrets.RUNPOD_API_KEY }}
+        timeout-minutes: 20
+        run: >-
+          python .github/scripts/runpod_api.py 
+          --action execute
+          --pod-id ${{ steps.create-pod.outputs.pod-id }}
+          --test-command "pytest ./fastvideo/v1/tests/encoders -s"
+
+      - name: Signal pod deletion
+        if: ${{ always() }}
+        env:
+          RUNPOD_API_KEY: ${{ secrets.RUNPOD_API_KEY }}
+        run: >-
+          python .github/scripts/runpod_api.py 
+          --action delete
+          --pod-id ${{ steps.create-pod.outputs.pod-id }}
 
   ssim-test:
-    if: ${{ github.event.pull_request.draft == false }}
+    needs: change-filter
+    if: >-
+      (github.event_name != 'workflow_dispatch' && github.event.pull_request.draft == false) || 
+      (github.event_name == 'workflow_dispatch' && github.event.inputs.run_ssim_test == 'true')
     runs-on: ubuntu-latest
     environment: runpod-runners
     steps:
@@ -86,7 +131,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: "3.10"
 
@@ -100,37 +145,60 @@ jobs:
       - name: Install dependencies
         run: pip install requests
 
-      - name: Run tests on RunPod
+      - name: Create RunPod instance
+        id: create-pod
         env:
           JOB_ID: "ssim-test"
           RUNPOD_API_KEY: ${{ secrets.RUNPOD_API_KEY }}
-          GITHUB_SHA: ${{ github.sha }}
-          GITHUB_REF: ${{ github.ref }}
-          GITHUB_REPOSITORY: ${{ github.repository }}
           GITHUB_RUN_ID: ${{ github.run_id }}
-        timeout-minutes: 30
+        timeout-minutes: 10
         run: >-
           python .github/scripts/runpod_api.py 
+          --action create
           --gpu-type "NVIDIA A40"
           --gpu-count 2
           --disk-size 100
           --volume-size 100
-          --test-command "pip install -e .[test] &&
-          pip install flash-attn==2.7.0.post2 --no-build-isolation &&
-          python scripts/huggingface/download_hf.py --repo_id=FastVideo/FastHunyuan-diffusers --local_dir=data/FastHunyuan-diffusers --repo_type=model &&
-          pytest ./fastvideo/v1/tests/ssim -vs"
+
+      - name: Install dependencies on RunPod
+        env:
+          RUNPOD_API_KEY: ${{ secrets.RUNPOD_API_KEY }}
+        timeout-minutes: 10
+        run: >-
+          python .github/scripts/runpod_api.py 
+          --action execute
+          --pod-id ${{ steps.create-pod.outputs.pod-id }}
+          --test-command "pip install -e .[test] && pip install flash-attn==2.7.0.post2 --no-build-isolation"
+
+      - name: Run SSIM tests
+        env:
+          RUNPOD_API_KEY: ${{ secrets.RUNPOD_API_KEY }}
+        timeout-minutes: 20
+        run: >-
+          python .github/scripts/runpod_api.py 
+          --action execute
+          --pod-id ${{ steps.create-pod.outputs.pod-id }}
+          --test-command "pytest ./fastvideo/v1/tests/ssim -vs"
+
+      - name: Signal pod deletion
+        if: ${{ always() }}
+        env:
+          RUNPOD_API_KEY: ${{ secrets.RUNPOD_API_KEY }}
+        run: >-
+          python .github/scripts/runpod_api.py 
+          --action delete
+          --pod-id ${{ steps.create-pod.outputs.pod-id }}
 
   runpod-cleanup:
     needs: [encoder-test, ssim-test] # Add other jobs to this list as you create them
-    if: ${{ always() && github.event.pull_request.draft == false && (contains(needs.*.result, 'success') || contains(needs.*.result, 'failure'))}}
+    if: ${{ always() && ((github.event_name != 'workflow_dispatch' && github.event.pull_request.draft == false) || github.event_name == 'workflow_dispatch') }}
     runs-on: ubuntu-latest
-    environment: runpod-runners
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: "3.10"
 
