--- a/.github/workflows/pr-test.yml
+++ b/.github/workflows/pr-test.yml
@@ -30,12 +30,12 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  pre-commit:
-    uses: ./.github/workflows/pre-commit.yml
+  # pre-commit:
+  #   uses: ./.github/workflows/pre-commit.yml
 
   change-filter:
     runs-on: ubuntu-latest
-    needs: pre-commit
+    # needs: pre-commit
     if: ${{ github.event.pull_request.draft == false || github.event_name == 'workflow_dispatch' }}
     outputs:
       encoder-test: ${{ steps.filter.outputs.encoder-test }}
