--- a/.github/workflows/build-image-template.yml
+++ b/.github/workflows/build-image-template.yml
@@ -65,10 +65,12 @@ jobs:
       - name: Prepare tags
         id: prepare-tags
         run: |
-          TAGS="type=raw,value=${{ inputs.tag_suffix }}-latest"
-          TAGS="${TAGS}\ntype=raw,value=${{ inputs.tag_suffix }}-${{ github.sha }}"
+          SHORT_SHA=$(echo ${{ github.sha }} | cut -c1-7)
           
-          # Hardcode Python 3.10 as the default image
+          TAGS="type=raw,value=${{ inputs.tag_suffix }}-latest"
+          TAGS="${TAGS}\ntype=raw,value=${{ inputs.tag_suffix }}-sha-${SHORT_SHA}"
+          
+          # Set Python 3.10 as the default image
           if [[ "${{ inputs.python_version }}" == "3.10" ]]; then
             TAGS="${TAGS}\ntype=raw,value=latest"
           fi
